--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.jpeg'
 background:         'assets/img/blackwhite.jpeg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://i-tingh.github.io/
+url:                https://Micro-IT.github.io/
 
 # Jekyll
 permalink:          /:title/
