--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,6 @@ sass:
 disqus_shortname:   taylantatli
 
 # Social
-# if you don't have any of social below, comment the line.
 #google:
   #plus:            #username
   #analytics:
@@ -41,7 +40,7 @@ email:              ihuang@hsph.harvard.edu
 linkedin:           i-ting-huang-522b5910b/
 twitter:            I_TingH
 facebook:           iting.s.huang
-github-url:         I-TingH
+github-url:         Micro-IT
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #xing:              username
 #instagram:          username
